:construction: make more progress on options

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -8,6 +8,13 @@
 <body>
 <div id="container">
   <aside class="sidebar">
+    <div class="sidebar-logo">
+      <img src="img/icon-sidebar.png" alt="" class="sidebar-icon">
+      <span class="sidebar-name">
+        Better TweetDeck <br>
+        <small class="sidebar-version-number">v3.0.0</small>
+      </span>
+    </div>
     <div class="nav-flex">
       <h3 class="sidebar-title">Settings</h3>
       <nav class="sidebar-nav">
@@ -17,6 +24,7 @@
 
       <h3 class="sidebar-title">Meta</h3>
       <nav class="sidebar-nav">
+        <a href="#onInstall" class="nav-item">Welcome</a>
         <a href="#credits" class="nav-item">Credits / About</a>
         <a href="#debug" class="nav-item">Debug Infos</a>
       </nav>
@@ -27,13 +35,6 @@
         <a href="https://github.com/eramdam/BetterTweetDeck" class="nav-item">GitHub</a>
         <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=XK9SQ6ZDE9UF2&lc=US&item_name=Damien%20Erambert&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donate_SM%2egif%3aNonHosted" class="nav-item">Donate</a>
       </nav>
-    </div>
-    <div class="sidebar-logo">
-      <img src="img/icon-sidebar.png" alt="" class="sidebar-icon">
-      <span class="sidebar-name">
-        Better TweetDeck <br>
-        <small class="sidebar-version-number">v3.0.0</small>
-      </span>
     </div>
   </aside>
 
@@ -70,6 +71,24 @@
 
     <section class="content-block" id="visual">
       <h2 class="section-title">Appearance</h2>
+    </section>
+
+    <section class="content-block" id="onInstall">
+      <h2 class="section-title">Thanks for installing Better TweetDeck!</h2>
+
+      <div class="settings-section">
+        <h5>Let's get started!</h5>
+
+        <p>Better TweetDeck is made to improve your experience on <a href="https://tweetdeck.twitter.com">tweetdeck.twitter.com</a>!</p>
+
+        <p>
+          The default settings have been applied, feel free to modify them to your liking!
+        </p>
+
+        <h5>Then?</h5>
+
+        <p>You should follow <a href="https://twitter.com/BetterTDeck">@BetterTDeck</a> on Twitter for support, news and trivia about Better TweetDeck!</p>
+      </div>
     </section>
 
     <section class="content-block" id="debug">
