--- a/src/options/options.html
+++ b/src/options/options.html
@@ -92,6 +92,8 @@
     </section>
 
     <section class="content-block" id="debug">
+      <h2 class="section-title">Debug Infos</h2>
+
       <div class="settings-section">
         <h5>Informations</h5>
 
