--- a/src/options/options.html
+++ b/src/options/options.html
@@ -18,8 +18,10 @@
     <div class="nav-flex">
       <h3 class="sidebar-title">Settings</h3>
       <nav class="sidebar-nav">
-        <a href="#tweets" class="nav-item -selected">Tweets</a>
-        <a href="#visual" class="nav-item">Appearance</a>
+        <a href="#tweets" class="nav-item -selected">Tweets: name & time</a>
+        <a href="#tweetsDisplay" class="nav-item">Tweets: display</a>
+        <a href="#visual" class="nav-item">Interface</a>
+        <a href="#btdContent" class="nav-item">Content</a>
       </nav>
 
       <h3 class="sidebar-title">Meta</h3>
@@ -40,17 +42,25 @@
 
   <main class="content">
     <section class="content-block" id="tweets">
-      <h2 class="section-title">Tweets</h2>
+      <h2 class="section-title">Tweets: name & time</h2>
 
       <div class="settings-section">
-        <h5>Time should be:</h5>
+        <h5>Time display style</h5>
 
         <ul>
-          <li><input type="radio" name="timestamp" id="item1"><label for="item1">Relative (1m, 2h, 3d...)</label></li>
-          <li><input type="radio" name="timestamp" id="item2"><label for="item2">Absolute (dd/mm/yy hh:mm)</label></li>
-          <li><input type="radio" name="timestamp" id="item3"><label for="item3">Absolute "US Style" (mm/dd/yy hh:mm)</label></li>
+          <li>
+            <input type="radio" name="ts" id="relative"><label for="relative">Relative <small>1m, 2h, 3d</small></label>
+          </li>
+          <li>
+            <input type="radio" name="ts" id="absolute_metric"><label for="absolute_metric">Absolute<small>dd/mm/yy hh:mm</small></label>
+          </li>
+          <li>
+            <input type="radio" name="ts" id="absolute_us"><label for="absolute_us">Absolute US Style<small>mm/dd/yy hh:mm</small></label>
+          </li>
 
-          <li><input type="checkbox" name="timestamp" id="item1"><label for="item1">Display full date after 24h only</label></li>
+          <li>
+            <input type="checkbox" name="full_aft_24" id="full_aft_24"><label for="full_aft_24">Display full date after 24h</label>
+          </li>
         </ul>
       </div>
 
@@ -58,19 +68,129 @@
         <h5>Name display style</h5>
 
         <ul>
-          <li><input type="radio" name="timestamp" id="item1"><label for="item1">Full name @Username <small>lorem ipsum</small></label></li>
-          <li><input type="radio" name="timestamp" id="item2"><label for="item2">@Username Full name</label></li>
-          <li><input type="radio" name="timestamp" id="item3"><label for="item3">@Username</label></li>
-          <li><input type="radio" name="timestamp" id="item3"><label for="item3">Full name</label></li>
+          <li>
+            <input type="radio" name="nm_disp" id="both"><label for="both">Full name @Username</label>
+          </li>
+          <li>
+            <input type="radio" name="nm_disp" id="inverted"><label for="inverted">@Username Full name</label>
+          </li>
+          <li>
+            <input type="radio" name="nm_disp" id="username"><label for="username">@Username</label>
+          </li>
+          <li>
+            <input type="radio" name="nm_disp" id="fullname"><label for="fullname">Full name</label>
+          </li>
+          <li>
+            <input type="checkbox" name="css.usrname_only_typeahed" id="usrname_only_typeahed"><label for="usrname_only_typeahed">The auto-completion displays only usernames</label>
+          </li>
+        </ul>
+      </div>
 
-          <li><input type="checkbox" name="timestamp" id="item1"><label for="item1">The auto-completion displays only usernames</label></li>
-          <li><input type="checkbox" name="timestamp" id="item1"><label for="item1">Rounded avatars</label></li>
+      <div class="settings-section">
+        <h5>Preview</h5>
+      </div>
+    </section>
+
+    <section class="content-block" id="tweetsDisplay">
+      <h2 class="section-title">Tweets: display</h2>
+
+      <div class="settings-section">
+        <h5>Avatars & details</h5>
+
+        <ul>
+          <li>
+            <input type="checkbox" name="css.round_pic" id="round_pic">
+            <label for="round_pic">Rounded avatars</label>
+          </li>
+          <li>
+            <input type="checkbox" name="css.show_verified" id="show_verified">
+            <label for="show_verified">Show "verified" badge</label>
+          </li>
+          <li>
+            <input type="checkbox" name="css.hide_context" id="hide_context">
+            <label for="hide_context">Hide "In reply to" label on mentions</label>
+          </li>
+          <li>
+            <input type="checkbox" name="css.actions_on_right" id="actions_on_right">
+            <label for="actions_on_right">Show tweet actions on the right</label>
+          </li>
+          <li>
+            <input type="checkbox" name="css.actions_on_hover" id="actions_on_hover">
+            <label for="actions_on_hover">Show tweet actions on hover</label>
+          </li>
+          <li>
+            <input type="checkbox" name="no_hearts" id="no_hearts">
+            <label for="no_hearts">Show stars instead of hearts</label>
+          </li>
+          <li>
+            <input type="checkbox" name="rtl_text_style" id="rtl_text_style">
+            <label for="rtl_text_style">Detect and apply RTL style when needed</label>
+          </li>
+        </ul>
+      </div>
+
+      <div class="settings-section">
+        <h5>Preview</h5>
+      </div>
+    </section>
+
+    <section class="content-block" id="btdContent">
+      <h2 class="section-title">Content</h2>
+
+      <div class="settings-section">
+        <ul>
+          <li>
+            <input type="checkbox" name="share_item.enabled" id="enabled">
+            <label for="enabled">Add the "Share on Better TweetDeck" action on contextual menu <small>Will be applied at next Chrome restart</small></label>
+          </li>
+          <li>
+            <input type="checkbox" name="share_item.short_txt" id="short_txt">
+            <label for="short_txt">Shorten the selected text while using the "Share on Better TweetDeck" action <small>Will be applied at next Chrome restart</small></label>
+          </li>
+          <li>
+            <input type="checkbox" name="no_tco" id="no_tco">
+            <label for="no_tco">Expand t.co links</label>
+          </li>
+        </ul>
+      </div>
+
+      <div class="settings-section">
+        <h5>Display thumbnails from:</h5>
+
+        <ul class="settings-thumbnails-providers-list">
         </ul>
       </div>
     </section>
 
     <section class="content-block" id="visual">
-      <h2 class="section-title">Appearance</h2>
+      <h2 class="section-title">Interface</h2>
+
+      <div class="settings-section">
+        <h5>General</h5>
+
+        <ul>
+          <li>
+            <input type="checkbox" name="css.minimal_mode" id="minimal_mode">
+            <label for="minimal_mode">Enable the "Minimal" mode</label>
+          </li>
+          <li>
+            <input type="checkbox" name="css.no_play_btn" id="no_play_btn">
+            <label for="no_play_btn">Hide the Play button on video thumbnails</label>
+          </li>
+          <li>
+            <input type="checkbox" name="css.no_col_icns" id="no_col_icns">
+            <label for="no_col_icns">Hide icons in columns headers</label>
+          </li>
+          <li>
+            <input type="checkbox" name="css.small_icns_compose" id="small_icns_compose">
+            <label for="small_icns_compose">Icons are smaller in the Compose panel</label>
+          </li>
+          <li>
+            <input type="checkbox" name="css.gray_icns_notifs" id="gray_icns_notifs">
+            <label for="gray_icns_notifs">Notifications icons are in grayscale</label>
+          </li>
+        </ul>
+      </div>
     </section>
 
     <section class="content-block" id="onInstall">
