add an interactive preview for time/username display in options

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -99,6 +99,11 @@
 
       <div class="settings-section">
         <h5>Preview</h5>
+
+        <div class="tweet-preview -name-time">
+          <span class="username">BetterTDeck <em>Better TweetDeck</em></span>
+          <span class="date">01:41 pm</span>
+        </div>
       </div>
     </section>
 
