add preview for tweet: display section

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -147,6 +147,17 @@
 
       <div class="settings-section">
         <h5>Preview</h5>
+
+        <div class="tweet-preview -display -name-time">
+          <span class="username">BetterTDeck <em>Better TweetDeck</em></span>
+          <span class="date">01:41 pm</span>
+          <span class="avatar"></span>
+          <span class="actions">
+            <span class="heart"></span>
+          </span>
+          <span class="context -hidden"></span>
+          <span class="verified -hidden"></span>
+        </div>
       </div>
     </section>
 
