:construction: began work on localization

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Better TweetDeck Options</title>
+  <title data-i18n="settingsTitle">Better TweetDeck Options</title>
   <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
@@ -16,33 +16,33 @@
       </span>
     </div>
     <div class="nav-flex">
-      <h3 class="sidebar-title">Settings</h3>
+      <h3 class="sidebar-title" data-i18n="settings">Settings</h3>
       <nav class="sidebar-nav">
-        <a href="#tweets" class="nav-item -selected">Tweets: name & time</a>
-        <a href="#tweetsDisplay" class="nav-item">Tweets: display</a>
-        <a href="#visual" class="nav-item">Interface</a>
-        <a href="#btdContent" class="nav-item">Content</a>
+        <a href="#tweets" class="nav-item -selected" data-i18n="sec_tweetsName">Tweets: name & time</a>
+        <a href="#tweetsDisplay" class="nav-item" data-i18n="sec_tweetsDisplay">Tweets: display</a>
+        <a href="#visual" class="nav-item" data-i18n="sec_interface">Interface</a>
+        <a href="#btdContent" class="nav-item" data-i18n="sec_content">Content</a>
       </nav>
 
       <h3 class="sidebar-title">Meta</h3>
       <nav class="sidebar-nav">
-        <a href="#onInstall" class="nav-item">Welcome</a>
-        <a href="#credits" class="nav-item">Credits / About</a>
-        <a href="#debug" class="nav-item">Debug Infos</a>
+        <a href="#onInstall" class="nav-item" data-i18n="sec_welcome">Welcome</a>
+        <a href="#credits" class="nav-item" data-i18n="sec_credits">Credits / About</a>
+        <a href="#debug" class="nav-item" data-i18n="sec_debug">Debug Infos</a>
       </nav>
 
-      <h3 class="sidebar-title">Links</h3>
+      <h3 class="sidebar-title" data-i18n="sec_links">Links</h3>
       <nav class="sidebar-nav">
         <a href="https://twitter.com/BetterTDeck" class="nav-item">@BetterTDeck</a>
         <a href="https://github.com/eramdam/BetterTweetDeck" class="nav-item">GitHub</a>
-        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=XK9SQ6ZDE9UF2&lc=US&item_name=Damien%20Erambert&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donate_SM%2egif%3aNonHosted" class="nav-item">Donate</a>
+        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=XK9SQ6ZDE9UF2&lc=US&item_name=Damien%20Erambert&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donate_SM%2egif%3aNonHosted" class="nav-item" data-i18n="sec_donate">Donate</a>
       </nav>
     </div>
   </aside>
 
   <main class="content">
     <section class="content-block" id="tweets">
-      <h2 class="section-title">Tweets: name & time</h2>
+      <h2 class="section-title" data-i18n="sec_tweetsName">Tweets: name & time</h2>
 
       <div class="settings-section">
         <h5>Time display style</h5>
