:flags: add locale on save btn

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -313,7 +313,7 @@
     </section>
 
     <div class="save-bar">
-      <button class="save-button" disabled>No changes</button>
+      <button class="save-button" disabled data-lang="save_no">No changes</button>
     </div>
   </main>
 </div>
