:cookie: add an option for bigger emojis in tweets

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -119,6 +119,10 @@
 
         <ul>
           <li>
+            <input type="checkbox" name="css.bigger_emojis" id="bigger_emojis">
+            <label for="bigger_emojis" data-lang="css_bigger_emojis">Bigger emojis in tweets</label>
+          </li>
+          <li>
             <input type="checkbox" name="css.round_pic" id="round_pic">
             <label for="round_pic" data-lang="css_round_pic">Rounded avatars</label>
           </li>
