:cookie: option to hide links from thumbnails

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -225,8 +225,8 @@
             <label for="minimal_mode" data-lang="css_minimal_mode">Enable the "Minimal" mode</label>
           </li>
           <li>
-            <input type="checkbox" name="css.no_play_btn" id="no_play_btn">
-            <label for="no_play_btn" data-lang="css_no_play_btn">Hide the Play button on video thumbnails</label>
+            <input type="checkbox" name="css.hide_url_thumb" id="hide_url_thumb">
+            <label for="hide_url_thumb" data-lang="css_hide_url_thumb">Hide link related to thumbnails in tweet (à la Twitter mobile)</label>
           </li>
           <li>
             <input type="checkbox" name="css.no_col_icns" id="no_col_icns">
